--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ border-radius: 3px;
 height: 400px;
 width: 400px;
 border:1px solid #ccc;
-border-bottom: ridge;
+margin-bottom: 10px;
 }
 li.octocat {
 	border-bottom: 1px solid #ccc;
