--- a/style.css
+++ b/style.css
@@ -1,142 +1,64 @@
 html {box-sizing: border box;}
-* , *: after, *: before {box-sizing: inherit;}     
-.octodex {
-	margin: 1px;
-	display:flex;
+* , *: after, *: before {box-sizing: inherit;} 
 
+.octocat > a > img{
+	width: 400px;
+	border: 1px solid #ccc;
 }
-.octocat > a >img {
-border-radius: 3px;
-height: 400px;
-width: 400px;
-border:1px solid #ccc;
-margin-bottom: 10px;
+.octocat{
+	width: 400px;
 }
-li.octocat {
-	border-bottom: 1px solid #ccc;
-	margin: 15px;
-	
+.octocat::before{
+	content: '';
+	display: inline-block;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 8px 5px 0 5px;
+	border-color: #ccc transparent transparent transparent;
+	position: relative;
+	top: 413px;
+  right: -386px;
 }
-.image-footer {
-	display: flex
-	justify-content: space-between;
-}	
-
-span.image-number:before {
-	content:"#";
-
-}
-li {
-	list-style-type: none;
-}
-span.image-number {
-	font-family: Helvetica;
-	font-weight: bold;
-	color: #ccc;
-	float: left;
-	clear: both;
-    
-
-}
-div .image-caption > span{
-	font-family: Helvetica;
-	font-weight: bold;
-	color: #ccc;
-    
-	
-}
-div .image-caption > a{
-	font-family: Helvetica;
-	font-weight: bold;
-	color: #000;
-	text-decoration: none;
-	margin: 0 2px 0 2px;
-}
-
-
-ul .authors > li > a > img {
-	height: 30px;
+.authors > li > a > img{
 	width: 30px;
-	
-
 }
-.image-caption, .authors li {
-	display: flex;
-
-
-}
-div.image-caption {
-	display: flex;
-	float: right;
-
-}
-.bottom {
-	margin: 1px;
-	display:flex;
-
-}
-.extra > a >img {
-border-radius: 3px;
-height: 400px;
-width: 400px;
-border:1px solid #ccc;
-margin-bottom: 10px;
-}
-li.extra {
-	border-bottom: 1px solid #ccc;
-	margin: 15px;
-	
-}
-.image-bottom {
-	display: flex
-	justify-content: space-between;
-}	
-
-span.number:before {
-	content:"#";
-
-}
-li {
-	list-style-type: none;
-}
-span.number {
-	font-family: Helvetica;
-	font-weight: bold;
-	color: #ccc;
-	float: left;
-	clear: both;
-    
-
-}
-div .caption > span{
-	font-family: Helvetica;
-	font-weight: bold;
-	color: #ccc;
-    
-	
-}
-div .caption > a{
-	font-family: Helvetica;
-	font-weight: bold;
-	color: #000;
-	text-decoration: none;
-	margin: 0 2px 0 2px;
-}
-
-
- .artists > li > a > img {
-	height: 30px;
-	width: 30px;
-	
-
-}
-.caption, .artists li {
-	display: flex;
-
-
-}
-div.caption {
-	display: flex;
-	float: right;
-
-}
+ .octodex{
+	 display: flex;
+	 width: 1300px;
+	 justify-content: space-between;
+	 margin: auto;
+	 flex-wrap: wrap;
+	 font-family: sans-serif;	
+ }
+ li{
+	 list-style: none;
+ }
+ ul{
+	 padding: 0;
+ }
+ .image-footer{
+	 display: flex;
+	 justify-content: space-between;
+	 border-bottom: 1px solid #ccc;
+	 padding-left: 5px;
+	 margin-top: 10px;
+ }
+ .image-caption{
+	 display: flex;
+ }
+ span{
+	 color: #ccc;
+ }
+ a {
+	 color: black;
+	 text-decoration: none;
+	 margin: 0 3px 0 3px;
+	 font-weight: bold;
+ }
+ .image-number{
+	 font-weight: bold;
+ }
+ .image-number::before{
+	content: "#"
+ }
